--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <!-- validate -->
     <string name="empty_drugstore_name">Tên nhà thuốc không được bỏ trống</string>
     <string name="empty_address">Địa chỉ không được bỏ trống</string>
+    <string name="amount_">Số lượng:</string>
+    <string name="unit_">Đơn vị tính:</string>
 </resources>
