--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="something_wrong">Có lỗi xảy ra</string>
     <string name="drugstore">Nhà thuốc</string>
-    <string name="drug">Tên thuốc</string>
+    <string name="drug">Tên thuốc:</string>
     <string name="address">Địa chỉ</string>
     <string name="drugstore_">Nhà thuốc:</string>
     <string name="address_">Địa chỉ: </string>
